[WIP] API and implementation for config instance builder
Fixes #1001