@@ -211,4 +211,33 @@ public interface ConfigMessages {
 
     @Message(id = 56, value = "Incompatible ConfigProviderResolver type: Expected %s, but found %s")
     IllegalStateException incompatibleConfigProvider(String expected, String actual);
+
+    @Message(id = 57, value = "Could not generate ConfigMapping")
+    IllegalStateException couldNotGenerateMapping(@Cause Throwable throwable);
+
+    default SecurityException accessDenied(Class<?> ourClass, Class<?> targetType) {
+        Module ourModule = ourClass.getModule();
+        Module targetModule = targetType.getModule();
+        assert targetModule.isNamed(); // otherwise we wouldn't be here
+        if (ourModule.isNamed()) {
+            return accessDenied(ourModule.getName(), targetType, targetType.getPackageName(), targetModule.getName());
+        } else {
+            return accessDenied(targetType, targetType.getPackageName(), targetModule.getName());
+        }
+    }
+
+    @Message(id = 58, value = "Access to %2$s was denied in a modular environment. To avoid this error, edit "
+            + "`module-info.java` of %4$s to include `opens %3$s to %1$s`; or, add `--add-opens=%4$s/%3$s=%1$s` to "
+            + "the JVM command line.")
+    SecurityException accessDenied(String ourModuleName, Class<?> targetType, String targetPackage, String targetModuleName);
+
+    @Message(id = 59, value = "Access to %1$s was denied in a mixed-module environment. To avoid this error, "
+            + "add `--add-opens=%3$s/%2$s=ALL-UNNAMED` to the JVM command line.")
+    SecurityException accessDenied(Class<?> targetType, String targetPackage, String targetModuleName);
+
+    @Message(id = 60, value = "Missing a valid constructor on configuration implementation %s")
+    IllegalStateException noConstructor(Class<?> implClass);
+
+    @Message(id = 61, value = "The accessor for a configuration property is not valid")
+    IllegalArgumentException invalidGetter();
 }
